--- a/index.html
+++ b/index.html
@@ -969,14 +969,14 @@
                             </article>
                             <article class="article-frame animate-on-scroll animation-delay-600">
                                 <a href="https://github.com/AffineCipher-0/FinalProjectWeb-Secondhand" target="_blank" rel="noopener noreferrer">
-                                    <h4 class="text-2xl font-bold mb-2 hover:underline">Toko Online Barang Bekas – SECONDHAND</h4>
+                                    <h4 class="text-2xl font-bold mb-2 hover:underline">Toko Online – SECONDHAND</h4>
                                 </a>
                                 <p class="text-sm mb-4">Kategori: Pengembangan Web, E-Commerce, PHP, MySQL, HTML, CSS, JavaScript</p>
                                 <p class="text-justify">
                                     Melompat ke era '90-an, saat World Wide Web mulai membuka gerbang perdagangan global. Proyek ini mereplikasi semangat awal e-commerce dengan membangun 'Secondhand', sebuah platform fungsional untuk jual-beli barang bekas, lengkap dengan sistem manajemen admin yang komprehensif.
                                 </p>
                                 <div class="text-right mt-6">
-                                    <button data-modal-target="#secondhand-modal" class="classic-button text-sm py-2 px-4">Lihat Repositori</button>
+                                    <button data-modal-target="#secondhand-modal" class="classic-button text-sm py-2 px-4">Baca Selengkapnya</button>
                                 </div>
                             </article>
                             <article class="article-frame animate-on-scroll animation-delay-800">
@@ -991,7 +991,7 @@
                                 </div>
                             </article>
                             <article class="article-frame animate-on-scroll" style="animation-delay: 1s;">
-                                <h4 class="text-2xl font-bold mb-2">Transformasi Digital Studi Kasus: Modernisasi Proses Jual Beli Mobil Bekas</h4>
+                                <h4 class="text-2xl font-bold mb-2">Transformasi Digital Studi Kasus: Modernisasi Proses Jual Beli Mobil</h4>
                                 <p class="text-sm mb-4">Kategori: Analisis Sistem, Inovasi Digital, Desain Proses Bisnis</p>
                                 <p class="text-justify">
                                     Studi kasus ini menganalisis modernisasi proses jual beli mobil bekas, dari era klasik ke digital, dengan fokus pada pengembangan sistem informasi inovatif untuk menciptakan ekosistem yang transparan dan aman.
@@ -2192,4 +2192,5 @@
 
 </body>
 </html>
+
 
