--- a/index.html
+++ b/index.html
@@ -857,13 +857,57 @@
                         <h2 class="text-4xl md:text-5xl mb-4 leading-tight text-center animate-on-scroll animation-delay-200 text-[var(--text-light)]">Jejak Inovasi: Dari Algoritma Al-Khwarizmi hingga Kecerdasan Buatan</h2>
                         <p id="current-date" class="text-base text-center animate-on-scroll animation-delay-400 text-[var(--text-light)] opacity-80"></p>
                         <p class="text-lg leading-relaxed mb-8 text-justify animate-on-scroll animation-delay-400 text-[var(--text-light)]">
-                            Sejarah teknologi adalah perjalanan panjang tentang bagaimana ide-ide besar lahir dari fondasi yang diletakkan oleh para pemikir terdahulu. Perjalanan ini dimulai pada abad ke-9, ketika seorang ilmuwan Muslim bernama Al-Khwarizmi memperkenalkan konsep algoritma, dasar dari semua komputasi modern. Pemikirannya menjadi pondasi logika yang memungkinkan manusia merancang mesin yang dapat menghitung, memproses data, dan menyelesaikan masalah secara sistematis. “Algoritma bukan sekadar perhitungan, tetapi cara berpikir yang membentuk masa depan teknologi.”
-    Berabad-abad kemudian, pada abad ke-15, Johannes Gutenberg menemukan mesin cetak, sebuah inovasi yang merevolusi penyebaran informasi. Sebelum itu, pengetahuan hanya dikuasai segelintir orang, namun mesin cetak membuat buku dan ilmu pengetahuan menyebar ke seluruh dunia, dengan dampak yang setara dengan internet di era modern: mempercepat kolaborasi dan memperluas wawasan umat manusia.
-    Memasuki abad ke-18, Revolusi Industri mengubah dunia secara drastis melalui mesin uap dan mekanisasi. Untuk pertama kalinya, tenaga mekanis menggantikan kerja fisik manusia, memicu perubahan sosial besar dan melahirkan era industri modern. Era ini juga menjadi fondasi bagi lahirnya teknologi komunikasi instan di abad berikutnya.
-    Pada abad ke-19, Samuel Morse memperkenalkan telegraf, memungkinkan komunikasi jarak jauh hanya dalam hitungan detik. Sandi Morse menjadi bahasa universal pertama dalam komunikasi digital, membuka jalan bagi telepon, radio, hingga internet, dan untuk pertama kalinya informasi bergerak lebih cepat daripada manusia itu sendiri.
-    Abad ke-20 menandai kelahiran komputer digital. Generasi pertama komputer sangat besar dan terbatas kemampuannya, tetapi dalam beberapa dekade, inovasi mikroprosesor dan sirkuit terintegrasi membuat komputer menjadi lebih kecil, cepat, dan terjangkau. Komputer berkembang dari sekadar alat hitung menjadi pusat kendali digital yang menopang kehidupan modern. Menjelang akhir abad ini, lahirlah internet, jaringan global yang menghubungkan miliaran orang dan perangkat, menghapus batasan geografis dan menghadirkan revolusi kedua dalam penyebaran informasi setelah mesin cetak.
-    Kini, di abad ke-21, kita memasuki era di mana teknologi mampu berpikir dan belajar sendiri. Kecerdasan Buatan (Artificial Intelligence) dan Internet of Things (IoT) memungkinkan perangkat saling berkomunikasi, menganalisis data, dan mengambil keputusan secara mandiri. Mobil dapat mengemudi sendiri, rumah menjadi pintar, dan industri bekerja tanpa campur tangan manusia. Namun, kemajuan ini juga menghadirkan tantangan etika dan tanggung jawab untuk memastikan teknologi digunakan demi kebaikan bersama.
-    Portofolio ini menyajikan proyek-proyek yang berdiri di atas bahu para raksasa sejarah, menggabungkan warisan klasik dengan inovasi modern. Setiap karya menjadi bukti bahwa perjalanan teknologi adalah kisah yang belum berakhir—narasi yang terus ditulis setiap hari oleh para insinyur, pemikir, dan pencipta di seluruh dunia.
+                            <h3>Abad ke-9 — Awal Algoritma</h3>
+  <p>
+    Sejarah teknologi adalah perjalanan panjang tentang bagaimana ide-ide besar lahir dari fondasi yang diletakkan oleh para pemikir terdahulu. 
+    Perjalanan ini dimulai pada abad ke-9, ketika seorang ilmuwan Muslim bernama Al-Khwarizmi memperkenalkan konsep algoritma, dasar dari semua komputasi modern. 
+    Pemikirannya menjadi pondasi logika yang memungkinkan manusia merancang mesin yang dapat menghitung, memproses data, dan menyelesaikan masalah secara sistematis. 
+    “Algoritma bukan sekadar perhitungan, tetapi cara berpikir yang membentuk masa depan teknologi.”
+  </p>
+
+  <h3>Abad ke-15 — Revolusi Mesin Cetak</h3>
+  <p>
+    Berabad-abad kemudian, pada abad ke-15, Johannes Gutenberg menemukan mesin cetak, sebuah inovasi yang merevolusi penyebaran informasi. 
+    Sebelum itu, pengetahuan hanya dikuasai segelintir orang, namun mesin cetak membuat buku dan ilmu pengetahuan menyebar ke seluruh dunia, 
+    dengan dampak yang setara dengan internet di era modern: mempercepat kolaborasi dan memperluas wawasan umat manusia.
+  </p>
+
+  <h3>Abad ke-18 — Revolusi Industri</h3>
+  <p>
+    Memasuki abad ke-18, Revolusi Industri mengubah dunia secara drastis melalui mesin uap dan mekanisasi. 
+    Untuk pertama kalinya, tenaga mekanis menggantikan kerja fisik manusia, memicu perubahan sosial besar dan melahirkan era industri modern. 
+    Era ini juga menjadi fondasi bagi lahirnya teknologi komunikasi instan di abad berikutnya.
+  </p>
+
+  <h3>Abad ke-19 — Telegraf & Komunikasi Jarak Jauh</h3>
+  <p>
+    Pada abad ke-19, Samuel Morse memperkenalkan telegraf, memungkinkan komunikasi jarak jauh hanya dalam hitungan detik. 
+    Sandi Morse menjadi bahasa universal pertama dalam komunikasi digital, membuka jalan bagi telepon, radio, hingga internet, 
+    dan untuk pertama kalinya informasi bergerak lebih cepat daripada manusia itu sendiri.
+  </p>
+
+  <h3>Abad ke-20 — Komputer & Internet</h3>
+  <p>
+    Abad ke-20 menandai kelahiran komputer digital. Generasi pertama komputer sangat besar dan terbatas kemampuannya, 
+    tetapi dalam beberapa dekade, inovasi mikroprosesor dan sirkuit terintegrasi membuat komputer menjadi lebih kecil, cepat, dan terjangkau. 
+    Komputer berkembang dari sekadar alat hitung menjadi pusat kendali digital yang menopang kehidupan modern. 
+    Menjelang akhir abad ini, lahirlah internet, jaringan global yang menghubungkan miliaran orang dan perangkat, 
+    menghapus batasan geografis dan menghadirkan revolusi kedua dalam penyebaran informasi setelah mesin cetak.
+  </p>
+
+  <h3>Abad ke-21 — Kecerdasan Buatan & IoT</h3>
+  <p>
+    Kini, di abad ke-21, kita memasuki era di mana teknologi mampu berpikir dan belajar sendiri. 
+    Kecerdasan Buatan (Artificial Intelligence) dan Internet of Things (IoT) memungkinkan perangkat saling berkomunikasi, 
+    menganalisis data, dan mengambil keputusan secara mandiri. Mobil dapat mengemudi sendiri, rumah menjadi pintar, dan industri bekerja tanpa campur tangan manusia. 
+    Namun, kemajuan ini juga menghadirkan tantangan etika dan tanggung jawab untuk memastikan teknologi digunakan demi kebaikan bersama.
+  </p>
+
+  <h3>Penutup</h3>
+  <p>
+    Portofolio ini menyajikan proyek-proyek yang berdiri di atas bahu para raksasa sejarah, menggabungkan warisan klasik dengan inovasi modern. 
+    Setiap karya menjadi bukti bahwa perjalanan teknologi adalah kisah yang belum berakhir — narasi yang terus ditulis setiap hari oleh para insinyur, pemikir, dan pencipta di seluruh dunia.
+  </p>
                         </p>
                          <div class="text-right animate-on-scroll animation-delay-600">
                              <button data-modal-target="#timeline-modal" class="classic-button">Lihat Garis Waktu</button>
@@ -2192,5 +2236,6 @@
 
 </body>
 </html>
+
 
 
