--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
                             </article>
                             <article class="article-frame animate-on-scroll animation-delay-600">
                                 <a href="https://github.com/AffineCipher-0/FinalProjectWeb-Secondhand" target="_blank" rel="noopener noreferrer">
-                                    <h4 class="text-2xl font-bold mb-2 hover:underline">Toko Online Barang Bekas – SECONDHAND</h4>
+                                    <h4 class="text-2xl font-bold mb-2 hover:underline">Toko Online Barang – SECONDHAND</h4>
                                 </a>
                                 <p class="text-sm mb-4">Kategori: Pengembangan Web, E-Commerce, PHP, MySQL, HTML, CSS, JavaScript</p>
                                 <p class="text-justify">
@@ -818,7 +818,7 @@
                                 </div>
                             </article>
                             <article class="article-frame animate-on-scroll" style="animation-delay: 1s;">
-                                <h4 class="text-2xl font-bold mb-2">Transformasi Digital Studi Kasus: Modernisasi Proses Jual Beli Mobil Bekas</h4>
+                                <h4 class="text-2xl font-bold mb-2">Transformasi Digital Studi Kasus: Modernisasi Proses Jual Beli Mobil</h4>
                                 <p class="text-sm mb-4">Kategori: Analisis Sistem, Inovasi Digital, Desain Proses Bisnis</p>
                                 <p class="text-justify">
                                     Studi kasus ini menganalisis modernisasi proses jual beli mobil bekas, dari era klasik ke digital, dengan fokus pada pengembangan sistem informasi inovatif untuk menciptakan ekosistem yang transparan dan aman.
