--- a/index.html
+++ b/index.html
@@ -901,7 +901,7 @@
                             <article class="project-card h-full flex flex-col animate-on-scroll" style="animation-delay: 1.2s;">
                                 <canvas id="pieces-canvas" class="project-canvas" width="500" height="250"></canvas>
                                 <div class="project-content">
-                                    <h4 class="manuscript-title">ANALISIS PIECES TRANSFORMASI DIGITAL MOBIL BEKAS</h4>
+                                    <h4 class="manuscript-title">ANALISIS PIECES TRANSFORMASI DIGITAL MOBIL</h4>
                                     <p class="text-sm mb-3 text-slate-600">Kategori: Analisis Sistem, Desain Proses Bisnis</p>
                                     <p class="manuscript-excerpt mb-4 text-justify">
                                         Menganalisis dan memetakan modernisasi proses jual beli mobil bekas, dari era klasik ke digital, menggunakan kerangka kerja PIECES. Studi ini mengidentifikasi kelemahan sistem konvensional dan merekomendasikan solusi digital untuk menciptakan ekosistem yang lebih transparan, efisien, dan aman bagi semua pihak.
@@ -2393,4 +2393,5 @@
 
 </body>
 </html>
+
 
