--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
                         <div class="fancy-divider"></div>
                         <h3 class="text-3xl md:text-4xl font-bold text-center mb-4 animate-on-scroll">Proyek Unggulan</h3>
                         <p class="max-w-3xl mx-auto text-center text-lg mb-10 animate-on-scroll animation-delay-200">Berikut adalah beberapa proyek unggulan yang telah saya kembangkan, yang mencerminkan keahlian serta pengalaman saya dalam merancang dan mengimplementasikan solusi teknologi.</p>
-                        <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                             <article class="project-card h-full flex flex-col animate-on-scroll animation-delay-400">
                                 <canvas id="cnn-canvas" class="project-canvas" width="500" height="250"></canvas>
                                 <div class="project-content">
@@ -901,7 +901,7 @@
                             <article class="project-card h-full flex flex-col animate-on-scroll" style="animation-delay: 1.2s;">
                                 <canvas id="pieces-canvas" class="project-canvas" width="500" height="250"></canvas>
                                 <div class="project-content">
-                                    <h4 class="manuscript-title">ANALISIS PIECES TRANSFORMASI DIGITAL MOBIL</h4>
+                                    <h4 class="manuscript-title">ANALISIS PIECES TRANSFORMASI DIGITAL MOBIL BEKAS</h4>
                                     <p class="text-sm mb-3 text-slate-600">Kategori: Analisis Sistem, Desain Proses Bisnis</p>
                                     <p class="manuscript-excerpt mb-4 text-justify">
                                         Menganalisis dan memetakan modernisasi proses jual beli mobil bekas, dari era klasik ke digital, menggunakan kerangka kerja PIECES. Studi ini mengidentifikasi kelemahan sistem konvensional dan merekomendasikan solusi digital untuk menciptakan ekosistem yang lebih transparan, efisien, dan aman bagi semua pihak.
