--- a/index.html
+++ b/index.html
@@ -901,10 +901,10 @@
                             <article class="project-card h-full flex flex-col animate-on-scroll" style="animation-delay: 1.2s;">
                                 <canvas id="pieces-canvas" class="project-canvas" width="500" height="250"></canvas>
                                 <div class="project-content">
-                                    <h4 class="manuscript-title">ANALISIS PIECES TRANSFORMASI DIGITAL MOBIL BEKAS</h4>
+                                    <h4 class="manuscript-title">ANALISIS PIECES TRANSFORMASI DIGITAL MOBIL</h4>
                                     <p class="text-sm mb-3 text-slate-600">Kategori: Analisis Sistem, Desain Proses Bisnis</p>
                                     <p class="manuscript-excerpt mb-4 text-justify">
-                                        Menganalisis dan memetakan modernisasi proses jual beli mobil bekas, dari era klasik ke digital, menggunakan kerangka kerja PIECES. Studi ini mengidentifikasi kelemahan sistem konvensional dan merekomendasikan solusi digital untuk menciptakan ekosistem yang lebih transparan, efisien, dan aman bagi semua pihak.
+                                        Menganalisis dan memetakan modernisasi proses jual beli mobil, dari era klasik ke digital, menggunakan kerangka kerja PIECES. Studi ini mengidentifikasi kelemahan sistem konvensional dan merekomendasikan solusi digital untuk menciptakan ekosistem yang lebih transparan, efisien, dan aman bagi semua pihak.
                                     </p>
                                     <div class="project-buttons">
                                         <button data-modal-target="#pieces-modal" data-iframe-src="https://affinecipher-0.github.io/PIECES/" class="classic-button text-sm py-2 px-4">Baca Laporan Analisis</button>
@@ -1383,7 +1383,7 @@
     <div id="pieces-modal" class="modal-overlay" tabindex="-1" role="dialog" aria-modal="true" aria-labelledby="pieces-modal-title">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 id="pieces-modal-title" class="modal-title">Studi Kasus: Modernisasi Jual Beli Mobil Bekas</h5>
+                <h5 id="pieces-modal-title" class="modal-title">Studi Kasus: Modernisasi Jual Beli Mobil</h5>
                 <button class="modal-close-btn" aria-label="Tutup">&times;</button>
             </div>
             <div class="modal-body p-0">
@@ -2393,5 +2393,6 @@
 
 </body>
 </html>
+
 
 
