--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Algoritma Peradaban | Portofolio Gatot Sasangka</title>
+    <title>Algoritma | Portofolio Gatot Sasangka</title>
 
     <meta name="description" content="Portofolio Gatot Sasangka yang disajikan dalam tema Baitul Hikmah, menampilkan proyek-proyek di bidang Jaringan, IoT, AI, dan Pemrograman Web.">
     <meta name="keywords" content="Gatot Sasangka, portofolio, insinyur jaringan, IoT, AI, pengembangan web, Baitul Hikmah, astrolab, sasangkagatot@gmail.com, CV">
@@ -2393,6 +2393,7 @@
 
 </body>
 </html>
+
 
 
 
