--- a/index.html
+++ b/index.html
@@ -976,7 +976,7 @@
                                             <strong>Jaringan dan Keamanan:</strong> Kompeten dalam Keamanan Jaringan, Perancangan Jaringan, Jaringan Komputer Lanjutan, dan Infrastruktur IT.
                                         </li>
                                         <li>
-                                            <strong>Keterampilan Lunak dan Manajemen:</strong> Dibekali dengan pengetahuan Manajemen Strategik, Kepemimpinan, Metodologi Penelitian, dan Etika Profesi untuk mendukung kerja tim dan profesionalisme.
+                                            <strong>Keterampilan Non-Teknis dan Manajemen:</strong> Dibekali dengan pengetahuan Manajemen Strategik, Kepemimpinan, Metodologi Penelitian, dan Etika Profesi untuk mendukung kerja tim dan profesionalisme.
                                         </li>
                                     </ul>
                                 </div>
@@ -2393,6 +2393,7 @@
 
 </body>
 </html>
+
 
 
 
