--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <meta name="description" content="Portofolio Gatot Sasangka yang disajikan dalam tema Baitul Hikmah, menampilkan proyek-proyek di bidang Jaringan, IoT, AI, dan Pemrograman Web.">
     <meta name="keywords" content="Gatot Sasangka, portofolio, insinyur jaringan, IoT, AI, pengembangan web, Baitul Hikmah, astrolab, sasangkagatot@gmail.com, CV">
-    <meta property="og:title" content="Algoritma Peradaban | Portofolio Gatot Sasangka">
+    <meta property="og:title" content="Algoritma | Portofolio Gatot Sasangka">
     <meta property="og:description" content="Menjelajahi proyek-proyek inovatif dengan semangat intelektual Zaman Keemasan.">
     <meta property="og:image" content="https://placehold.co/1200x630/1a2a44/c7a55b?text=Algoritma+Peradaban">
     <meta property="og:url" content="https://affinecipher-0.github.io/Sasangka/">
@@ -2396,4 +2396,5 @@
 
 </body>
 </html>
+
 
