--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
 <body class="bg-[var(--bg-deep-blue)]">
 
     <audio id="background-music" loop>
-        <source src="https://raw.githubusercontent.com/AffineCipher-0/Sasangka/main/Dari%20Al-Khwarizmi%20ke%20AI%20Etis_%20Membongkar%20Benang%20Merah%20Filosofi%20dan%20Fondasi%20Teknologi.mp3" type="audio/mpeg">
+        <source src="https://raw.githubusercontent.com/AffineCipher-0/Sasangka/main/Dari%20Algoritma%20Al-Khwarizmi%20ke%20AI%20dan%20IoT_%20Membongkar%20Evolusi%20Inovasi%20Digital%20dan%20Filosofi%20di%20Baliknya.mp3" type="audio/mpeg">
         Browser Anda tidak mendukung elemen audio.
     </audio>
 
@@ -1426,14 +1426,14 @@
     </div>
 
     <div id="manuscript-modal" class="modal-overlay" tabindex="-1" role="dialog" aria-modal="true" aria-labelledby="manuscript-modal-title">
-        <div class="modal-content" style="max-width: 900px;">
+        <div class="modal-content" style="max-width: 900px; height: auto; max-height: 85vh;">
             <div class="modal-header">
                 <h5 id="manuscript-modal-title" class="modal-title">Manuskrip</h5>
                 <button class="modal-close-btn" aria-label="Tutup">&times;</button>
             </div>
             <div class="modal-body">
                 <div class="modal-loader"><div class="modal-loader-content"><svg class="modal-loader-svg" viewBox="0 0 150 150"><circle class="modal-progress-ring__circle" stroke-width="4" fill="transparent" r="65" cx="75" cy="75"/></svg><div class="modal-loader-text">Memuat...</div></div></div>
-                <div id="manuscript-modal-content" class="modal-main-content content-hidden p-4 text-justify newspaper-columns">
+                <div id="manuscript-modal-content" class="modal-main-content content-hidden p-4 text-justify">
                     <!-- Konten Manuskrip akan disisipkan di sini oleh JavaScript -->
                 </div>
             </div>
@@ -2666,10 +2666,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
-
