--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
                         <header class="pb-8">
                             <div class="container mx-auto px-6 text-center text-[var(--text-light)]">
                                 <div class="border-t-2 border-b-2 border-[var(--border-gold)] py-4" style="background-image: url('data:image/svg+xml,%3Csvg width=\'6\' height=\'6\' viewBox=\'0 0 6 6\' xmlns=\'http://www.w3.org/2000/svg\'%3E%3Cg fill=\'%23c7a55b\' fill-opacity=\'0.05\' fill-rule=\'evenodd\'%3E%3Cpath d=\'M5 0h1L0 6V5zM6 5v1H5z\'/%3E%3C/g%3E%3C/svg%3E');">
-                                    <h1 class="text-5xl md:text-7xl font-cinzel tracking-wider mb-4">THE ENGINEER</h1>
+                                    <h1 class="text-5xl md:text-7xl font-cinzel tracking-wider mb-4 animated-gradient-text">THE ENGINEER</h1>
                                     <div class="text-xs tracking-widest flex justify-between items-center text-[var(--text-light)]/80">
                                         <span>EDISI KHUSUS: JARINGAN, IOT, AI & PEMROGRAMAN WEB</span>
                                         <span class="live-datetime"></span>
@@ -782,7 +782,7 @@
                         <header class="pb-8">
                             <div class="container mx-auto px-6 text-center text-[var(--text-light)]">
                                 <div class="border-t-2 border-b-2 border-[var(--border-gold)] py-4" style="background-image: url('data:image/svg+xml,%3Csvg width=\'6\' height=\'6\' viewBox=\'0 0 6 6\' xmlns=\'http://www.w3.org/2000/svg\'%3E%3Cg fill=\'%23c7a55b\' fill-opacity=\'0.05\' fill-rule=\'evenodd\'%3E%3Cpath d=\'M5 0h1L0 6V5zM6 5v1H5z\'/%3E%3C/g%3E%3C/svg%3E');">
-                                    <h1 class="text-5xl md:text-7xl font-cinzel tracking-wider mb-4">Profil Sang Inisiat</h1>
+                                    <h1 class="text-5xl md:text-7xl font-cinzel tracking-wider mb-4 animated-gradient-text">Profil Sang Inisiat</h1>
                                     <div class="text-xs tracking-widest flex justify-between items-center text-[var(--text-light)]/80">
                                         <span>EDISI KHUSUS: JARINGAN, IOT, AI & PEMROGRAMAN WEB</span>
                                         <span class="live-datetime"></span>
@@ -845,7 +845,7 @@
                         <header class="pb-8">
                             <div class="container mx-auto px-6 text-center text-[var(--text-light)]">
                                 <div class="border-t-2 border-b-2 border-[var(--border-gold)] py-4" style="background-image: url('data:image/svg+xml,%3Csvg width=\'6\' height=\'6\' viewBox=\'0 0 6 6\' xmlns=\'http://www.w3.org/2000/svg\'%3E%3Cg fill=\'%23c7a55b\' fill-opacity=\'0.05\' fill-rule=\'evenodd\'%3E%3Cpath d=\'M5 0h1L0 6V5zM6 5v1H5z\'/%3E%3C/g%3E%3C/svg%3E');">
-                                    <h1 class="text-5xl md:text-7xl font-cinzel tracking-wider mb-4">Laporan Utama</h1>
+                                    <h1 class="text-5xl md:text-7xl font-cinzel tracking-wider mb-4 animated-gradient-text">Laporan Utama</h1>
                                     <div class="text-xs tracking-widest flex justify-between items-center text-[var(--text-light)]/80">
                                         <span>EDISI KHUSUS: JARINGAN, IOT, AI & PEMROGRAMAN WEB</span>
                                         <span class="live-datetime"></span>
@@ -958,7 +958,7 @@
                         <header class="pb-8">
                             <div class="container mx-auto px-6 text-center text-[var(--text-light)]">
                                 <div class="border-t-2 border-b-2 border-[var(--border-gold)] py-4" style="background-image: url('data:image/svg+xml,%3Csvg width=\'6\' height=\'6\' viewBox=\'0 0 6 6\' xmlns=\'http://www.w3.org/2000/svg\'%3E%3Cg fill=\'%23c7a55b\' fill-opacity=\'0.05\' fill-rule=\'evenodd\'%3E%3Cpath d=\'M5 0h1L0 6V5zM6 5v1H5z\'/%3E%3C/g%3E%3C/svg%3E');">
-                                    <h1 class="text-5xl md:text-7xl font-cinzel tracking-wider mb-4">Latar Pendidikan</h1>
+                                    <h1 class="text-5xl md:text-7xl font-cinzel tracking-wider mb-4 animated-gradient-text">Latar Pendidikan</h1>
                                     <div class="text-xs tracking-widest flex justify-between items-center text-[var(--text-light)]/80">
                                         <span>EDISI KHUSUS: JARINGAN, IOT, AI & PEMROGRAMAN WEB</span>
                                         <span class="live-datetime"></span>
@@ -1007,7 +1007,7 @@
                         <header class="pb-8">
                             <div class="container mx-auto px-6 text-center text-[var(--text-light)]">
                                 <div class="border-t-2 border-b-2 border-[var(--border-gold)] py-4" style="background-image: url('data:image/svg+xml,%3Csvg width=\'6\' height=\'6\' viewBox=\'0 0 6 6\' xmlns=\'http://www.w3.org/2000/svg\'%3E%3Cg fill=\'%23c7a55b\' fill-opacity=\'0.05\' fill-rule=\'evenodd\'%3E%3Cpath d=\'M5 0h1L0 6V5zM6 5v1H5z\'/%3E%3C/g%3E%3C/svg%3E');">
-                                    <h1 class="text-5xl md:text-7xl font-cinzel tracking-wider mb-4">Sertifikasi</h1>
+                                    <h1 class="text-5xl md:text-7xl font-cinzel tracking-wider mb-4 animated-gradient-text">Sertifikasi</h1>
                                     <div class="text-xs tracking-widest flex justify-between items-center text-[var(--text-light)]/80">
                                         <span>EDISI KHUSUS: JARINGAN, IOT, AI & PEMROGRAMAN WEB</span>
                                         <span class="live-datetime"></span>
@@ -1041,7 +1041,7 @@
                         <header class="pb-8">
                             <div class="container mx-auto px-6 text-center text-[var(--text-light)]">
                                 <div class="border-t-2 border-b-2 border-[var(--border-gold)] py-4" style="background-image: url('data:image/svg+xml,%3Csvg width=\'6\' height=\'6\' viewBox=\'0 0 6 6\' xmlns=\'http://www.w3.org/2000/svg\'%3E%3Cg fill=\'%23c7a55b\' fill-opacity=\'0.05\' fill-rule=\'evenodd\'%3E%3Cpath d=\'M5 0h1L0 6V5zM6 5v1H5z\'/%3E%3C/g%3E%3C/svg%3E');">
-                                    <h1 class="text-5xl md:text-7xl font-cinzel tracking-wider mb-4">Gagasan ilmu</h1>
+                                    <h1 class="text-5xl md:text-7xl font-cinzel tracking-wider mb-4 animated-gradient-text">Gagasan ilmu</h1>
                                     <div class="text-xs tracking-widest flex justify-between items-center text-[var(--text-light)]/80">
                                         <span>EDISI KHUSUS: JARINGAN, IOT, AI & PEMROGRAMAN WEB</span>
                                         <span class="live-datetime"></span>
@@ -1154,7 +1154,7 @@
                         <header class="pb-8">
                             <div class="container mx-auto px-6 text-center text-[var(--text-light)]">
                                 <div class="border-t-2 border-b-2 border-[var(--border-gold)] py-4" style="background-image: url('data:image/svg+xml,%3Csvg width=\'6\' height=\'6\' viewBox=\'0 0 6 6\' xmlns=\'http://www.w3.org/2000/svg\'%3E%3Cg fill=\'%23c7a55b\' fill-opacity=\'0.05\' fill-rule=\'evenodd\'%3E%3Cpath d=\'M5 0h1L0 6V5zM6 5v1H5z\'/%3E%3C/g%3E%3C/svg%3E');">
-                                    <h1 class="text-5xl md:text-7xl font-cinzel tracking-wider mb-4">Hubungi Saya</h1>
+                                    <h1 class="text-5xl md:text-7xl font-cinzel tracking-wider mb-4 animated-gradient-text">Hubungi Saya</h1>
                                     <div class="text-xs tracking-widest flex justify-between items-center text-[var(--text-light)]/80">
                                         <span>EDISI KHUSUS: JARINGAN, IOT, AI & PEMROGRAMAN WEB</span>
                                         <span class="live-datetime"></span>
@@ -2666,6 +2666,7 @@
 
 </body>
 </html>
+
 
 
 
