--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
             
             <canvas id="starfield-canvas"></canvas>
 
-            <div class="p-8 rounded-lg relative z-30 bg-[var(--bg-deep-blue)]/40 backdrop-blur-sm border border-[var(--border-gold)]/30 shadow-2xl max-w-5xl mx-auto">
+            <div class="w-full max-w-7xl rounded-lg relative z-30 bg-[var(--bg-deep-blue)]/40 backdrop-blur-sm border border-[var(--border-gold)]/30 shadow-2xl mx-auto py-8 px-4 sm:px-8 md:px-16">
                 <h1 class="text-6xl md:text-8xl mb-4 font-cinzel tracking-wider animated-gradient-text">THE ENGINEER</h1>
                 <p class="text-xl md:text-2xl mt-4 font-amiri text-[var(--text-light)] mb-8">Portofolio Gatot Sasangka</p>
                 <p class="text-lg md:text-xl mt-4 font-amiri text-[var(--text-light)] opacity-90 max-w-3xl mx-auto">
@@ -2666,6 +2666,11 @@
 
 </body>
 </html>
+
+
+
+
+
 
 
 
