--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
             <button id="sound-toggle" class="absolute top-8 right-8 z-50 text-[var(--text-light)] border border-[var(--text-light)]/50 px-4 py-2 text-sm font-bold tracking-widest hover:bg-[var(--text-light)] hover:text-[var(--bg-deep-blue)] transition-colors flex items-center justify-center gap-2" style="min-width: 160px;">
                 <span id="play-text" class="flex items-center gap-2">
                     <i class="fas fa-play" aria-hidden="true"></i>
-                    <span>Langkahkan Kaki</span>
+                    <span>Mulai Langkahmu</span>
                 </span>
                 <span id="stop-text" class="hidden flex items-center gap-2">
                     <i class="fas fa-pause" aria-hidden="true"></i>
@@ -2666,6 +2666,7 @@
 
 </body>
 </html>
+
 
 
 
